# bh_next_challenge

./: .gitignore  README.md  requirements.txt
admin/: pyproject.toml
admin-frontend/: package.json
agents/attachment_handler/: pyproject.toml  server.py  test.py
agents/attachment_handler/core/: attachment_handling_agent.py  config.py  executor.py
agents/attachment_handler/core/models/: file_data.py
agents/attachment_handler/skills/embedded_code_detection/: embedded_code_detector.py  patterns.py  utils.py
agents/attachment_handler/skills/gateway_validation/: gateway_validator.py
agents/attachment_handler/skills/malware_scan/: malware_scanner.py
agents/attachment_handler/skills/prompt_injection_detection/: llm_analysis.py  prompt_injection_detector.py  rule_based_detection.py
agents/orchestrator/: guidlines.py  main.py  mistral_service.py  pyproject.toml
agents/orchestrator/observability/: log_producer.py
agents/orchestrator/security/: authorization_policy.py  security_check.py  security_interceptor.py
agents/orchestrator/tools/: database_access_tool.py  mcp_products_tool.py  mcp_quotes_tool.py  rag_tool.py
agents/security_agent/: pyproject.toml  server.py
agents/security_agent/core/: executor.py  security_agent.py
agents/security_agent/skills/content_violation_detection/: content_violation_detection.py
agents/security_agent/skills/prompt_injection_detection/: llm_analysis.py  pi_patterns.py  prompt_injection_detector.py  rule_based_detection.py
db/: main.py  requirements.txt  run.py  start.sh
logs/: analytics_processor.py  docker-compose.yml  (+2 more)
mcp_tools/: pyproject.toml
mcp_tools/clients/products/: product_mcp_client.py
mcp_tools/servers/database/: server.py
mcp_tools/servers/products/: server.py
mcp_tools/servers/products/core/: products_extraction.py  prompts.py  quote_enrichment.py
mcp_tools/servers/products/data/: extract_services_hierarchy.py
mcp_tools/servers/quotes/: server.py  utils.py
mcp_tools/servers/quotes/core/: quote_api.py
mcp_tools/servers/quotes/core/models/: quote_request.py
(+200 files in other folders)
