[project]
name = "mcp-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "langchain>=0.3.27",
    "langchain-mistralai>=0.2.11",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
]
