[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.3",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "aiopenapi3>=0.8.1",
    "aiorwlock>=1.5.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "jinja2>=3.1.6",
    "jwt>=1.4.0",
    "kafka-python>=2.2.15",
    "lagom>=2.7.7",
    "langchain>=0.3.27",
    "langchain-mistralai>=0.2.11",
    "langgraph>=0.6.6",
    "limits>=5.5.0",
    "mistralai>=1.9.8",
    "nano-vectordb>=0.0.4.3",
    "nanoid>=2.0.0",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pyjwt>=2.10.1",
    "pymongo>=4.14.1",
    "python-jose>=3.5.0",
    "redis>=6.4.0",
    "semver>=3.0.4",
    "structlog>=25.4.0",
    "tiktoken>=0.11.0",
    "typing>=3.10.0.0",
]
